--- a/layouts/partials/navbar.html
+++ b/layouts/partials/navbar.html
@@ -6,12 +6,11 @@
 <nav
   class="js-navbar-scroll navbar navbar-expand navbar-dark {{ if $cover }}td-navbar-cover{{ end }} flex-column flex-sm-row td-navbar">
   <a class="navbar-brand mr-2" style="display: flex; justify-content: center;" href="{{ .Site.Home.RelPermalink }}">
-    <img class="navbar-logo d-none d-md-inline" src="/logo.png" width="50px" alt="logo"/>
-    <img class="navbar-logo d-md-none" src="/logo.png" width="25px" alt="logo"/>
+    <img class="navbar-logo" src="/logo.png" width="38px" alt="logo"/>
   </a>
   <a class="navbar-brand" style="display: flex; justify-content: center;" href="{{ .Site.Home.RelPermalink }}">
-    <span class="font-weight-bold d-none d-sm-inline d-md-none" style="font-size: 0.875rem;">kcp</span>
-    <span class="font-weight-bold d-none d-md-inline">kcp</span>
+    <span class="font-weight-bold d-none d-sm-inline d-lg-none" style="font-size: 0.875rem;">kcp</span>
+    <span class="font-weight-bold d-none d-lg-inline">kcp</span>
   </a>
   <div class="td-navbar-nav-scroll ml-sm-auto mt-0" id="main_navbar">
     <ul class="navbar-nav mt-0">
