--- a/assets/scss/_styles_project.scss
+++ b/assets/scss/_styles_project.scss
@@ -121,3 +121,28 @@ dl.crd-meta {
   }
 
 }
+
+img[src$='#center']
+{
+  display: block;
+  margin: 2rem 2rem 2rem 2rem;
+  width: 85%;
+}
+
+@media (min-width: 992px) {
+  img[src$='#center'] {
+    width: 70%;
+  }
+}
+
+img[src$='#floatleft']
+{
+  float:left;
+  margin: 0.7rem;
+}
+
+img[src$='#floatright']
+{
+  float:right;
+  margin: 0.7rem;
+}
