--- a/themes/kcp/layouts/partials/head.html
+++ b/themes/kcp/layouts/partials/head.html
@@ -1,6 +1,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hello Hugo</title>
+    {{- partial "favicons.html" }}
+    <title>{{ block "title" . }}
+        {{ .Site.Title }}
+    {{ end }}</title>
     {{- partialCached "css.html" . }}
 </head>
