--- a/themes/kcp/layouts/partials/components/card.html
+++ b/themes/kcp/layouts/partials/components/card.html
@@ -6,7 +6,7 @@
         {{ .title }}
     </h3>
 
-    <p class="mt-2 hidden text-sm sm:block">
+    <p class="mt-2 text-sm sm:block">
       {{ .text }}
     </p>
   </div>
