--- a/themes/kcp/layouts/partials/head.html
+++ b/themes/kcp/layouts/partials/head.html
@@ -1,6 +1,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    {{ range .AlternativeOutputFormats -}}
+    <link rel="{{ .Rel }}" type="{{ .MediaType.Type }}" href="{{ .Permalink | safeURL }}">
+    {{ end -}}
+    {{ template "_internal/opengraph.html" . }}
+    {{ template "_internal/schema.html" . }}
+    {{ template "_internal/twitter_cards.html" . }}
     {{- partial "favicons.html" }}
     <title>{{ block "title" . }}
         {{ .Site.Title }}
