--- a/themes/kcp/layouts/home.html
+++ b/themes/kcp/layouts/home.html
@@ -3,28 +3,20 @@
     
     <div class="max-w-screen-xl mx-auto grid grid-rows-1 gap-8 -mt-4 p-4">
         <div class="relative grid grid-cols-1 sm:grid-cols-3 gap-4">
-            {{ partial "components/card.html" (dict "title" "Isolation through Workspaces" "text" "A large number of independent, fully-isolated “logical clusters” known as workspaces.") }}
-            {{ partial "components/card.html" (dict "title" "Massively multi-tenant API services" "text" "Enabling API service providers to offer Kubernetes-native APIs centrally using multi-tenant operators.") }}
-            {{ partial "components/card.html" (dict "title" "SaaS-like API Consumption" "text" "Easy API consumption for users in their workspaces in a SaaS-like fashion.") }}
+        {{ range .Site.Data.home.data.cards }}
+            {{ partial "components/card.html" . }}
+        {{ end }}
         </div>
 
         <div>
             <h2 class="text-center text-2xl p-8 font-extrabold sm:text-3xl">Our Project Goals</h2>
-            {{ partial "goals.html" }}
+            {{ partial "goals.html" . }}
         </div>
 
-        <div class="text-center">
-            <h2 class="text-2xl p-8 font-extrabold sm:text-3xl">We Love Collaboration</h2>
-            <p>We develop kcp completely in the open. Everybody is welcome to help making the vision of kcp reality.</p>
-            <p>
-            Meet us in person in the <a href="https://kubernetes.slack.com/archives/C021U8WSAFK">#kcp-dev</a> channel in Kubernetes Slack. Find our code at <a href="https://github.com/kcp-dev/kcp">Github</a>.
-            </p>
-        <a href="https://github.com/kcp-dev/kcp/graphs/contributors" class="w-max m-8">
-            <img src="https://contrib.rocks/image?repo=kcp-dev/kcp&amp;columns=10&amp;max=100" class="mx-auto">
-        </a>
-        <p class="text-xl">
-        We have a weekly community meeting: every Thursday 11am EST. Join us live! The agenda is available as Github issue shortly before the meeting. See the recordings on Youtube.
-        </p>
+        <div class="text-center max-w-3xl mx-auto [&>p>a>img]:mx-auto [&>p>a]:text-cyan-600 [&>p]:m-8">
+            <h2 class="text-2xl p-8 font-extrabold sm:text-3xl">{{ .Site.Data.home.data.community.title }}</h2>
+
+            {{ .Site.Data.home.data.community.text | markdownify }}
         </div>
     </div>
 {{ end }}
