--- a/themes/kcp/layouts/partials/goals.html
+++ b/themes/kcp/layouts/partials/goals.html
@@ -1,49 +1,10 @@
 <div class="space-y-4">
-  <details class="group [&_summary::-webkit-details-marker]:hidden" open>
-    <summary
-      class="flex cursor-pointer items-center justify-between gap-1.5 rounded-lg bg-gray-50 p-4 text-gray-900"
-    >
-      <h2 class="font-semibold text-lg">
-        Kubernetes at its core.
-No fork. No fragmentation.
-      </h2>
-
-      <svg
-        class="h-5 w-5 shrink-0 transition duration-300 group-open:-rotate-180"
-        xmlns="http://www.w3.org/2000/svg"
-        fill="none"
-        viewBox="0 0 24 24"
-        stroke="currentColor"
-      >
-        <path
-          stroke-linecap="round"
-          stroke-linejoin="round"
-          stroke-width="2"
-          d="M19 9l-7 7-7-7"
-        />
-      </svg>
-    </summary>
-
-    <p class="mt-4 px-4 leading-relaxed text-gray-700">
-        kcp takes full advantage of Kubernetes API conventions, the glue that binds the cloud-native technology ecosystem together and imbues Kubernetes popular end-user experience, but kcp has unbound it from Kubernetes workload orchestration and clusters.
-    </p>
-    <p class="mt-4 px-4 leading-relaxed text-gray-700">
-        One rule that is set in stone:<br>
-
-        kcp exposes 100% pure Kubernetes APIs by using the latest Kubernetes releases as the basis.
-    </p>
-    <p class="mt-4 px-4 leading-relaxed text-gray-700">
-        We live and breath Kubernetes and the community. No compromises.
-    </p>
-  </details>
-
+{{ range .Site.Data.home.data.goals }}
   <details class="group [&_summary::-webkit-details-marker]:hidden">
     <summary
       class="flex cursor-pointer items-center justify-between gap-1.5 rounded-lg bg-gray-50 p-4 text-gray-900"
     >
-      <h2 class="font-semibold text-lg">
-        Massive Multi-Tenancy
-      </h2>
+      <h2 class="font-semibold text-lg">{{ .title }}</h2>
 
       <svg
         class="h-5 w-5 shrink-0 transition duration-300 group-open:-rotate-180"
@@ -60,125 +21,9 @@ No fork. No fragmentation.
         />
       </svg>
     </summary>
-
-    <p class="mt-4 px-4 leading-relaxed text-gray-700">
-        kcp implements fully-isolated workspaces, each acting as its own Kubernetes-like cluster, with its own URL, its own set of APIs (e.g. different CRDs), its own RBAC, but as cheap and quick as a namespace
-    </p>
+    <div class="mt-4 px-4 leading-relaxed text-gray-700 [&>p]:pt-4">
+        {{ .text | markdownify }}
+    </div>
   </details>
-  <details class="group [&_summary::-webkit-details-marker]:hidden">
-    <summary
-      class="flex cursor-pointer items-center justify-between gap-1.5 rounded-lg bg-gray-50 p-4 text-gray-900"
-    >
-      <h2 class="font-semibold text-lg">
-        APIs as a Service
-      </h2>
-
-      <svg
-        class="h-5 w-5 shrink-0 transition duration-300 group-open:-rotate-180"
-        xmlns="http://www.w3.org/2000/svg"
-        fill="none"
-        viewBox="0 0 24 24"
-        stroke="currentColor"
-      >
-        <path
-          stroke-linecap="round"
-          stroke-linejoin="round"
-          stroke-width="2"
-          d="M19 9l-7 7-7-7"
-        />
-      </svg>
-    </summary>
-
-    <p class="mt-4 px-4 leading-relaxed text-gray-700">
-kcp extends Kube’s CRD extension model to an API export mechanism optimized for SaaS service providers offering APIs to thousands or many tens of thousands of user workspaces. Securely and efficiently.
-    </p>
-  </details>
-  <details class="group [&_summary::-webkit-details-marker]:hidden">
-    <summary
-      class="flex cursor-pointer items-center justify-between gap-1.5 rounded-lg bg-gray-50 p-4 text-gray-900"
-    >
-      <h2 class="font-semibold text-lg">
-        Open - no walled garden
-      </h2>
-
-      <svg
-        class="h-5 w-5 shrink-0 transition duration-300 group-open:-rotate-180"
-        xmlns="http://www.w3.org/2000/svg"
-        fill="none"
-        viewBox="0 0 24 24"
-        stroke="currentColor"
-      >
-        <path
-          stroke-linecap="round"
-          stroke-linejoin="round"
-          stroke-width="2"
-          d="M19 9l-7 7-7-7"
-        />
-      </svg>
-    </summary>
-
-    <p class="mt-4 px-4 leading-relaxed text-gray-700">
-        kcp does not replace Kubernetes, but complements it. As a global control plane to inter-connect Kubernetes clusters.
-    </p>
-    <p class="mt-4 px-4 leading-relaxed text-gray-700">
-        As a backend to host Kubernetes APIs as SaaS to any Kubernetes on any platform and any cloud provider, natively.
-    </p>
-  </details>
-  <details class="group [&_summary::-webkit-details-marker]:hidden">
-    <summary
-      class="flex cursor-pointer items-center justify-between gap-1.5 rounded-lg bg-gray-50 p-4 text-gray-900"
-    >
-      <h2 class="font-semibold text-lg">
-        Horizontally Scalable
-      </h2>
-
-      <svg
-        class="h-5 w-5 shrink-0 transition duration-300 group-open:-rotate-180"
-        xmlns="http://www.w3.org/2000/svg"
-        fill="none"
-        viewBox="0 0 24 24"
-        stroke="currentColor"
-      >
-        <path
-          stroke-linecap="round"
-          stroke-linejoin="round"
-          stroke-width="2"
-          d="M19 9l-7 7-7-7"
-        />
-      </svg>
-    </summary>
-
-    <p class="mt-4 px-4 leading-relaxed text-gray-700">
-        kcp schedules workspaces to shared apiservers (the shards), similarly to pods scheduled to nodes and containers on a node sharing a Linux kernel. Our ambitions are to eventually reach 1 million workspaces and 10,000 shards.
-    </p>
-  </details>
-    <details class="group [&_summary::-webkit-details-marker]:hidden">
-    <summary
-      class="flex cursor-pointer items-center justify-between gap-1.5 rounded-lg bg-gray-50 p-4 text-gray-900"
-    >
-      <h2 class="font-semibold text-lg">
-        Compute – Where are the Pods?
-
-      </h2>
-
-      <svg
-        class="h-5 w-5 shrink-0 transition duration-300 group-open:-rotate-180"
-        xmlns="http://www.w3.org/2000/svg"
-        fill="none"
-        viewBox="0 0 24 24"
-        stroke="currentColor"
-      >
-        <path
-          stroke-linecap="round"
-          stroke-linejoin="round"
-          stroke-width="2"
-          d="M19 9l-7 7-7-7"
-        />
-      </svg>
-    </summary>
-
-    <p class="mt-4 px-4 leading-relaxed text-gray-700">
-        kcp intentionally only knows generic APIs, no pods or related resources. Transparent-multi-cluster is an experimental kcp add-on to re-add some of Kube’s workload APIs, but reshaped to offer shared compute capacity making users forget about clusters and nodes.
-    </p>
-  </details>
+{{ end }}
 </div>
