Rework navigation to use alpine.js for open/close button
Signed-off-by: Marvin Beckers <mail@embik.me>

--- a/themes/kcp/layouts/partials/footer.html
+++ b/themes/kcp/layouts/partials/footer.html
@@ -37,7 +37,7 @@
         </ul>
         {{- end }}
         <p class="mt-4 text-xs text-gray-400">
-        This page uses <a href="https://github.com/themesberg/flowbite-icons">flowbite-icons</a>, licensed under <a href="https://github.com/themesberg/flowbite-icons/blob/main/LICENSE">MIT</a>.
+        This page uses <a href="https://github.com/themesberg/flowbite-icons">flowbite-icons</a> and <a href="https://alpinejs.dev">alpine.js</a>, licensed under MIT License.
         </p>
       </div>
 
