--- a/themes/kcp/layouts/partials/nav.html
+++ b/themes/kcp/layouts/partials/nav.html
@@ -1,4 +1,56 @@
 <header>
+     <nav 
+         class="flex flex-wrap items-center justify-between w-full py-4 px-4 md:py-0 text-lg"
+         x-data="{open: false, toggle(){this.open = !this.open;}}"
+     >
+       <div>
+            <a class="flex items-center" href="{{ .Site.BaseURL }}">
+              <span class="sr-only">Home</span>
+              {{ $image := resources.Get "icons/logo.svg" }}
+              <img src="{{ $image.RelPermalink }}" class="h-8 mr-3">
+              <span class="font-bold whitespace-nowrap">{{ .Site.Title }}</span>
+            </a>
+        </div>
+
+        <button @click="toggle">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            class="h-6 w-6 cursor-pointer md:hidden block"
+            fill="none"
+            viewBox="0 0 24 24"
+            stroke="currentColor"
+            stroke-width="2"
+            id="menu-button"
+          >
+            <path
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              d="M4 6h16M4 12h16M4 18h16"
+            />
+          </svg>
+        </button>
+       <div class="w-full md:flex md:items-center md:w-auto" id="menu"
+            x-bind:class="! open ? 'hidden' : ''"
+           >
+          <ul class="pt-4 text-base md:flex md:justify-between md:pt-0">
+            {{- with index site.Menus "main" }}
+            {{- range . }}
+            <li>
+              <a
+                class="md:p-4 py-2 text-black transition block hover:text-black/75"
+                href="{{ .URL }}"
+              >
+                {{ .Name }}
+              </a>
+            </li>
+            {{- end}}
+            {{- end }}
+          </ul>
+        </div>
+    </nav>
+</header>
+<!--
+<header>
   <div class="mx-auto max-w-screen-xl px-4 sm:px-6 lg:px-8">
     <div class="flex h-16 items-center justify-between">
       <div class="flex-1 md:flex md:items-center md:gap-12">
@@ -53,3 +105,4 @@
     </div>
   </div>
 </header>
+-->
