Reference correct data for 'learn more' button
Signed-off-by: Marvin Beckers <mail@embik.me>

--- a/themes/kcp/layouts/partials/hero.html
+++ b/themes/kcp/layouts/partials/hero.html
@@ -32,7 +32,7 @@
         </a>
 
         <a
-          href="{{ .Site.Data.home.data.buttons.learn_more }}"
+          href="{{ .Site.Data.home.data.hero.buttons.learn_more }}"
           class="block w-full rounded bg-white px-12 py-3 text-sm font-medium text-cyan-600 shadow hover:text-cyan-700 focus:outline-none focus:ring active:text-cyan-500 sm:w-auto"
         >
           Learn More
