Improve spacing, add more colors and video showcase section
Signed-off-by: Marvin Beckers <marvin@kubermatic.com>

--- a/themes/kcp/layouts/partials/nav.html
+++ b/themes/kcp/layouts/partials/nav.html
@@ -1,6 +1,6 @@
 <header>
      <nav 
-         class="flex flex-wrap items-center justify-between w-full py-4 px-4 md:py-0 text-lg"
+         class="flex flex-wrap items-center justify-between w-full py-4 px-4 md:py-4 md:px-8 text-lg"
          x-data="{open: false, toggle(){this.open = !this.open;}}"
      >
        <div>
@@ -32,12 +32,12 @@
        <div class="w-full md:flex md:items-center md:w-auto" id="menu"
             x-bind:class="! open ? 'hidden' : ''"
            >
-          <ul class="pt-4 text-base md:flex md:justify-between md:pt-0">
+          <ul class="pt-4 text-base md:flex md:justify-between md:pt-0 text-lg">
             {{- with index site.Menus "main" }}
             {{- range . }}
             <li>
               <a
-                class="md:p-4 py-2 text-black transition block hover:text-black/75"
+                class="md:p-4 py-2 transition block hover:text-black/75"
                 href="{{ .URL }}"
               >
                 {{ .Name }}
@@ -49,60 +49,3 @@
         </div>
     </nav>
 </header>
-<!--
-<header>
-  <div class="mx-auto max-w-screen-xl px-4 sm:px-6 lg:px-8">
-    <div class="flex h-16 items-center justify-between">
-      <div class="flex-1 md:flex md:items-center md:gap-12">
-        <a class="flex items-center" href="/">
-          <span class="sr-only">Home</span>
-          {{ $image := resources.Get "icons/logo.svg" }}
-          <img src="{{ $image.RelPermalink }}" class="h-8 mr-3">
-          <span class="font-bold whitespace-nowrap">{{ .Site.Title }}</span>
-        </a>
-      </div>
-
-      <div class="md:flex md:items-center md:gap-12 font-bold">
-        <nav aria-label="Global" class="hidden md:block">
-          <ul class="flex items-center gap-6 text-sm">
-            {{- with index site.Menus "main" }}
-            {{- range . }}
-            <li>
-              <a
-                class="text-black transition hover:text-black/75"
-                href="{{ .URL }}"
-              >
-                {{ .Name }}
-              </a>
-            </li>
-            {{- end}}
-            {{- end }}
-          </ul>
-        </nav>
-
-          <div class="block md:hidden">
-            <button
-              class="rounded bg-gray-100 p-2 text-gray-600 transition hover:text-gray-600/75"
-            >
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                class="h-5 w-5"
-                fill="none"
-                viewBox="0 0 24 24"
-                stroke="currentColor"
-                stroke-width="2"
-              >
-                <path
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                  d="M4 6h16M4 12h16M4 18h16"
-                />
-              </svg>
-            </button>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</header>
--->
