--- a/themes/kcp/layouts/partials/components/card.html
+++ b/themes/kcp/layouts/partials/components/card.html
@@ -1,5 +1,5 @@
 <div
-  class="relative flex items-start justify-between rounded-xl border border-gray-200 p-4 shadow-s sm:p-6 lg:p-8"
+  class="relative flex items-start justify-between rounded-xl border bg-white border-gray-200 p-4 shadow-s sm:p-6 lg:p-8"
 >
   <div class="text-gray-500">
     <h3 class="text-lg font-bold text-gray-900 sm:text-xl">
