Rework goals section
Signed-off-by: Marvin Beckers <marvin@kubermatic.com>

--- a/themes/kcp/layouts/partials/hero.html
+++ b/themes/kcp/layouts/partials/hero.html
@@ -8,10 +8,10 @@
   ></div>
 
   <div
-    class="relative py-24 sm:px-6 lg:flex lg:items-center px-4"
+    class="relative py-36 sm:px-6 lg:flex lg:items-center px-4"
   >
-    <div class="max-w-xl ltr:sm:text-left rtl:sm:text-right">
-      <h1 class="font-black text-5xl">
+    <div class="max-w-2xl ltr:sm:text-left rtl:sm:text-right">
+      <h1 class="font-black text-6xl tracking-tight">
         {{ .Site.Data.home.data.hero.header }}
 
         <strong class="bg-gradient-to-r from-havelock-blue-500 via-shakespeare-500 to-mantis-500 font-black text-transparent bg-clip-text">
