--- a/themes/kcp/layouts/home.html
+++ b/themes/kcp/layouts/home.html
@@ -24,18 +24,23 @@
     </div>
 
     <div class="my-4">
-        <div class="max-w-screen-xl mx-auto grid grid-rows-1 gap-8 -mt-4 p-4">
-            <div>
-                <h2 class="text-center text-4xl p-8 font-black">Our Project Goals</h2>
+        <div class="max-w-screen-xl mx-auto">
+            <h2 class="text-center text-5xl p-16 font-black">Our Project Goals</h2>
+        </div>
+    </div>
+
+
+    <div class="my-4">
+        <div class="max-w-screen-xl mx-auto">
                 {{ partial "goals.html" . }}
             </div>
         </div>
     </div>
 
     <div class="my-4">
-        <div class="max-w-screen-xl mx-auto grid grid-rows-1 gap-8 -mt-4 p-4">
+        <div class="max-w-screen-xl mx-auto">
         <div class="text-center text-lg mx-auto [&>p>a>img]:mx-auto [&>p>a]:text-shakespeare-600 [&>p]:m-8">
-            <h2 class="text-4xl p-8 font-black">{{ .Site.Data.home.data.community.title }}</h2>
+            <h2 class="text-5xl p-16 font-black">{{ .Site.Data.home.data.community.title }}</h2>
 
             {{ .Site.Data.home.data.community.text | markdownify }}
         </div>
