--- a/themes/kcp/layouts/home.html
+++ b/themes/kcp/layouts/home.html
@@ -14,11 +14,11 @@
             <div class="my-4 mx-auto text-right flex">
                 <div class="m-auto">
                     <span class="font-black text-4xl bg-gradient-to-r from-havelock-blue-500 via-shakespeare-500 to-mantis-500 font-black text-transparent bg-clip-text">Watch the latest video about kcp</span>
-                    <p class="text-lg mt-4 text-gray-900/75">{{ .Site.Data.home.data.video.description }}</p>
+                    <p class="text-xl font-light mt-4">{{ .Site.Data.home.data.video.description }}</p>
                 </div>
             </div>
-          <div class="mx-auto my-4">
-              <iframe class="rounded-lg aspect-video" width="500" src="{{ .Site.Data.home.data.video.embed_url }}" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+          <div class="mx-auto my-4 w-full">
+              <iframe class="rounded-lg aspect-video max-w-xl w-full" src="{{ .Site.Data.home.data.video.embed_url }}" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
           </div>
         </div>
     </div>
@@ -39,10 +39,12 @@
 
     <div class="my-4">
         <div class="max-w-screen-xl mx-auto">
-        <div class="text-center text-lg mx-auto [&>p>a>img]:mx-auto [&>p>a]:text-shakespeare-600 [&>p]:m-8">
+        <div class="text-center mx-auto">
             <h2 class="text-5xl p-12 font-black">{{ .Site.Data.home.data.community.title }}</h2>
 
-            {{ .Site.Data.home.data.community.text | markdownify }}
+            <div class="font-light text-xl [&>p>a>img]:mx-auto [&>p>a]:text-shakespeare-600 [&>p]:m-8">
+                {{ .Site.Data.home.data.community.text | markdownify }}
+            </div>
         </div>
     </div>
     </div>
