--- a/themes/kcp/layouts/partials/components/card.html
+++ b/themes/kcp/layouts/partials/components/card.html
@@ -2,11 +2,11 @@
   class="relative flex items-start justify-between rounded-xl border bg-white border-gray-200 p-4 shadow-s sm:p-6 lg:p-8"
 >
   <div class="text-gray-500">
-    <h3 class="text-lg font-bold text-gray-900 sm:text-xl">
+    <h3 class="text-lg font-extrabold text-gray-900 sm:text-xl">
         {{ .title }}
     </h3>
 
-    <p class="mt-2 text-sm sm:block">
+    <p class="mt-2 sm:block text-justify">
       {{ .text }}
     </p>
   </div>
