--- a/themes/kcp/layouts/partials/hero.html
+++ b/themes/kcp/layouts/partials/hero.html
@@ -19,21 +19,21 @@
         </strong>
       </h1>
 
-      <p class="mt-4 max-w-lg sm:text-xl/relaxed">
+      <p class="mt-4 max-w-lg text-xl/relaxed font-light">
         {{ .Site.Data.home.data.hero.tagline }}
       </p>
 
       <div class="mt-8 flex flex-wrap gap-4 text-center">
         <a
             href="{{ .Site.Data.home.data.hero.buttons.get_started }}"
-          class="block w-full rounded bg-shakespeare-600 px-12 py-3 text-sm font-medium text-white shadow hover:bg-shakespeare-700 focus:outline-none focus:ring active:bg-shakespeare-500 sm:w-auto"
+          class="block transition w-full rounded bg-shakespeare-600 px-12 py-3 text-sm font-medium text-white shadow hover:bg-shakespeare-700 focus:outline-none focus:ring active:bg-shakespeare-500 sm:w-auto"
         >
           Get Started
         </a>
 
         <a
           href="{{ .Site.Data.home.data.hero.buttons.learn_more }}"
-          class="block w-full rounded bg-white px-12 py-3 text-sm font-medium text-shakespeare-600 shadow hover:text-shakespeare-700 focus:outline-none focus:ring active:text-shakespeare-500 sm:w-auto"
+          class="block transition w-full rounded bg-white px-12 py-3 text-sm font-medium text-shakespeare-600 shadow hover:text-shakespeare-700 focus:outline-none focus:ring active:text-shakespeare-500 sm:w-auto"
         >
           Learn More
         </a>
